# redash-py

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
redash_py/: __init__.py  client.py  command.py  exceptions.py
