[metadata]
name = redash-py
version = attr: redash_py.__VERSION__
license = file: LICENSE
url = https://github.com/denzow/redash-py
author = denzow
author_email = denzow@gmail.com


[options]
install_requires =
    requests
    fire

[options.extras_require]

[options.entry_points]
console_scripts =
    redashpy = redash_py.command:main
